May 17, 2019  v.1.5.55
  updated URL for GO ontology (to use daily snapshots instead of monthly)

May 01, 2019  v.1.5.54
  DoLoader: added reporting of obsolete OMIM ids present in DO file

Apr 04, 2019  v.1.5.53
  HPO root term name is overridden to be 'Human phenotype' -- the original root term name, which was 'All',
    will become the root term synonym
  fixed issue of orphaned GO terms that should have been obsoleted by the pipeline

Feb 11, 2019  v.1.5.52
  updated source url for GO.obo file

Jan 15, 2019  v.1.5.51
  fixed generation of OBO files with synonyms having synonymtypedefs

Sep 28, 2018  v.1.5.50
  moved from subversion to github

Aug 20, 2018  v.1.5.49
  OboFileGenerator: fix to skip exporting xrefs without value (to avoid NullPointerException)

Aug 20, 2018  v.1.5.49
  OboFileGenerator: fix to skip exporting xrefs without value (to avoid NullPointerException)

Jul 11, 2018  v.1.5.47
  OboFileGenerator: properly emits synonymtypedef DISPLAY_SYNONYM

Jun 12, 2018  v.1.5.46
  TermStatGenerator: fixed issue with 'child_term_count' and 'parent_term_count'

Jun 4, 2018  v.1.5.45
  OboFileGenerator: fixed potential date conversion issue when running in multi-thread environment

May 31, 2018  v.1.5.44
  RDO ontology can be exported to FTP site

May 30, 2018  v.1.5.43
  PW,CMO,MMO and XCO ontologies can be exported to FTP site (logic and script fixes)

May 29, 2018  v.1.5.42
  Term xrefs are no longer loaded into ONT_XREFs table -- they are loaded as synonyms with type 'xref' instead

May 25, 2018  v.1.5.41
  PW,CMO,MMO and XCO ontologies can be exported to FTP site

Apr 30, 2018  v.1.5.40
  removed CMO,MMO and XCO ontologies from automatic processing; these ontologies can be live edited as of now

Mar 28, 2018  v.1.5.39
  removed PW ontology from automatic processing: PW ontology can be live edited as of now

Jan 3, 2018  v.1.5.38
  OboFileGenerator: fixed for DO+ ontology

Dec 29, 2017  v.1.5.37
  transition from RDO to DO+ ontology
